fix g1 config